# petchvm.github.io

./: .cspell.json  README.md  generate_portfolio.py  index.html  portfolio.json  pyproject.toml  resume.html
js/: app.js
